# Math

./: .gitignore  result_4parts.txt
4Piont_Compute_Sphere/include/: SPHERECONSENSUS.h
4Piont_Compute_Sphere/src/: function.cpp  main.cpp
Binary_2_ASCII/: binary_2_ascii.cpp
LLA_2_ECEF/include/: LLA_2_ECEF.H
LLA_2_ECEF/src/: function_LLA_2_ECEF.cpp  main.cpp
Levenberg_Marquardt/: main.cpp
Levenberg_Marquardt/include/: LM.H
Levenberg_Marquardt/src/: function.cpp  function_LM.cpp  main.cpp
Matplotlib_MinGW/include/: Matplotlib_test.H
Matplotlib_MinGW/src/: function_mtest.cpp  main.cpp
Numerical_Methods_for_PDE/: result_10parts.txt  result_15parts.txt  result_20parts.txt  result_4parts.txt  result_4parts_helmholtz.txt  result_4parts_helmholtz_1.txt  result_4parts_helmholtz_5.txt  result_5parts.txt  result_6parts.txt  result_8parts.txt
Numerical_Methods_for_PDE/Python/: poisson.py
Numerical_Methods_for_PDE/include/: NE4PED.H
Numerical_Methods_for_PDE/src/: function_NE4PED.cpp  main.cpp
Optical_Axis_Transition/: vecCal.m  固连相机滚转后光轴方向向量计算(2)(1).docx
Optical_Axis_Transition/include/: Optical_Axis_Transition.H
Piont_to_Face_Distance/: 0.txt  20200519.txt  CMakeLists.txt  data.txt  data2.txt  data3.txt
Piont_to_Face_Distance/.vscodeU/: c_cpp_properties.json  launch.json  settings.json  tasks.json
Piont_to_Face_Distance/include/: point2face.h
Piont_to_Face_Distance/src/: fuction.cpp  point2face.cpp
Plane_Included_Angle/: TestEigen.cpp
World_Coordinate_System/: CMakeLists0.txt  results.txt  results_20200730.txt  results_20200731.txt
(+19 files in other folders)
